@@ -8,6 +8,9 @@
 	* src/datafile.c (df_close):  Free matrix data that was stored in memory
 	during input.  Otherwise we leak memory after every plot of matrix data.
 
+	* src/plot2d.c (eval_plots):  Allow "fc <colorspec>" as an in-line
+	option to the plot command for plot styles that use a fill.
+
 	* src/term_api.h src/term.c (strlen_tex):  Add a special-case routine to
 	estimate the true number of output characters in a LaTeX string
 	containing markup. This is not a real LaTeX parser, but even a poor
